EXOJCR-756: fix pom.xml, added TesterSecurityManager in TCK profile